# cupcast

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 167ec731a9d1_initial_schema.py  a2f3c8e1d4b7_add_team_external_id.py
backend/app/: cache.py  config.py  dependencies.py  enums.py  main.py  seed.py
backend/app/integrations/football/: base.py  provider.py
backend/app/integrations/news/: base.py  provider.py
backend/app/jobs/: sync_tournament_data.py
backend/app/models/: __init__.py  match.py  prediction.py  team.py
backend/app/prediction_engine/: __init__.py  explanations.py  features.py  model.py
backend/app/repositories/: __init__.py  match.py  prediction.py  team.py
backend/app/routers/: __init__.py  matches.py  news.py  sentiment.py  simulations.py  teams.py
backend/app/schemas/: __init__.py  match.py  news.py  prediction.py  sentiment.py  team.py
backend/app/services/: __init__.py  cache.py  ingestion_service.py  match.py  model_prediction.py  news_service.py  prediction.py  sentiment_service.py  team.py
backend/app/simulation/: engine.py  schemas.py
backend/app/worker/: health.py  lock.py  main.py  scheduler.py
backend/tests/: conftest.py  test_api.py  test_caching.py  test_health.py  test_ingestion.py  test_models.py  test_news.py  test_prediction_engine.py  test_seed.py  test_sentiment.py  test_simulation.py  test_submission.py  test_worker.py
frontend/: .env.local.example  (+5 more)
(+36 files in other folders)
