[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cupcast-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.35,<2.1",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "pydantic-settings>=2.3.0,<3.0",
    "redis[asyncio]>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
